2a. Questão da AP2 de Guias ainda incompleta. Adicionado pacote para símbolo de fase

--- a/LaTeX/TeleCom/TI0058/AP2/report.tex
+++ b/LaTeX/TeleCom/TI0058/AP2/report.tex
@@ -57,6 +57,11 @@ Como Z$_{L}$ $=$ $\dfrac{V_{L}}{I_{L}}$ $=$ $\dfrac{V^{+} + V^{-}}{V^{+} - V^{-}
 \label{fig:IQ1}
 \end{figure}
 
+% resposta da 2a. Questão
+\item Normalizando a impedância da carga, em relação a impedância característica da linha de transmissão, temos Z$_{Ln}$ $=$ $\dfrac{Z_{L}}{Z_{0}}$ $=$ $\dfrac{80 + \jmath 100}{50}$ $\Rightarrow$ Z$_{Ln}$ $=$ $1.6 + \jmath 2$. Sobre carta de Smith desenha-se uma reta que passa sobre o ponto $(1.6,2)$ até a circunferência que mede o ângulo do coeficiente de reflexão, no caso $\theta \approx 35$\si{\degree}. Medindo o raio da carta, r$_{c} \approx 5,3$\si{\centi\meter}. A distância do ponto ao centro, $d \approx 8,4$\si{\centi\meter}. A razão $\dfrac{d}{r_{c}}$ nos dá o módulo de $\Gamma$, logo $|\Gamma|$ $=$ $\dfrac{5,3}{8,4}$ $\approx$ $0,63$. Assim o coeficiente de reflexão é dado por $\Gamma = 0,63\phase{35^{\circ}}$. Utilizando a escala {\bf SWR} e dado o $|\Gamma|$ $=$ $0,63$, temos o TOE $\approx$ $4,5$
 
+Para a admitância estende-se a reta de Z$_{Ln}$ para completar o diâmetro da circunferência. Marcando um ponto com a mesma distância de Z$_{Ln}$ ao centro sendo no sentido contrário, temos o ponto Y$_{Ln} = 0,24 - \jmath 0,3$. Assim Y$_{L}$ $=$ $\dfrac{Z_{0}}{Y_{Ln}}$ $=$ $\dfrac{50}{0,24 - \jmath 0,3}$ $\Rightarrow$ Y$_{L}$ $\approx$ $81,3 + \jmath 101.62$ $=$ $130.1\phase{51,34^{\circ}}$[\si{\siemens}].
+
+A impedância da carga a $0.15\lambda$ é encontrada acompanhando a marcação da circunferência que mostra os fatores do comprimento de onda na direção da carga, ao encontrar o valor desenha-se um segmento de reta até o centro da carta. Com um compasso, centrado na carta e de raio Z$_{Ln}$, faz-se um arco até encontrar o segmento de reta. Esse ponto é a impedância desejada. No caso Z$_{in}$ $\approx$ $0,6 - \jmath 1,2$ $\Rightarrow$ Z$_{in}$ $=$ $1.34\phase{-63,46^\circ}$[\si{\ohm}]
 \end{enumerate}
-% LocalWords:  Smith pt max LT LC LG RC
+% LocalWords:  Smith pt max LT LC LG RC Ln SWR
