--- a/LaTeX/TeleCom/TI0058/main.tex
+++ b/LaTeX/TeleCom/TI0058/main.tex
@@ -5,7 +5,7 @@
 \usepackage[dvips]{graphicx}
 \usepackage{subfigure}
 \usepackage{amsmath,amsfonts,amssymb}
-\usepackage{enumerate,siunitx}
+\usepackage{enumerate,siunitx,steinmetz}
 % \usepackage{pst-sigsys,pst-all}
 %\usepackage{indentfirst,siunitx,multicol}
 %\usepackage{booktabs,pstricks-add,pst-coil,siunitx,multirow,steinmetz}
